# dark-arts-defens-ldjam

./: .gitignore  Cargo.toml  README.md
src/: animation.rs  dark_arts_defense.rs  gamestate.rs  main.rs  mana.rs  movement.rs  velocity.rs
src/ai/: behavior.rs  plugin.rs
src/enemies/: enemy_spawner.rs  plugin.rs
src/player/: movement.rs  plugin.rs  spawn.rs  summoning.rs
src/ui/: health_text.rs  mana_text.rs  plugin.rs  score_text.rs
src/units/: acolyte.rs  health.rs  team.rs  unit_types.rs
