[package]
name = "dark-arts-defense"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"

[profile.dev]
debug = 2
opt-level = 0

[profile.dev.package."*"]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3
